# Tech-Challenge-01

./: .gitignore  Makefile  README.md  mlflow.db  pyproject.toml
docs/: deployment_architecture.md  ml_canvas.md  model_card.md  monitoring_plan.md
mlruns/: mlflow.db
mlruns/0/: meta.yaml
mlruns/817949319607242009/: meta.yaml
mlruns/817949319607242009/56c755f29683455c808111621b54bf24/: meta.yaml
mlruns/817949319607242009/56c755f29683455c808111621b54bf24/metrics/: auc_roc  f1
mlruns/817949319607242009/5dfe1338d06343c689d517459757d1b7/: meta.yaml
mlruns/817949319607242009/5dfe1338d06343c689d517459757d1b7/metrics/: auc_roc  f1
mlruns/817949319607242009/66e077b998a241ffba1606e31aab0815/: meta.yaml
mlruns/817949319607242009/66e077b998a241ffba1606e31aab0815/metrics/: auc_roc  f1
mlruns/817949319607242009/9973335024194e5592c464470e9e6116/: meta.yaml
mlruns/817949319607242009/9973335024194e5592c464470e9e6116/tags/: mlflow.runName
mlruns/817949319607242009/f1c23fc73c24448eba1a7b16dc6451ee/: meta.yaml
mlruns/817949319607242009/f1c23fc73c24448eba1a7b16dc6451ee/metrics/: auc_roc  f1
mlruns/817949319607242009/f1c23fc73c24448eba1a7b16dc6451ee/tags/: mlflow.source.name
models/: mlp_best.pt  pipeline.joblib
notebooks/: 01_eda.ipynb  02_baselines.ipynb  03_mlp_pytorch.ipynb  mlflow.db
src/: api.py
src/api/: api.py
src/data/: loader.py  preprocessing.py  schema.py
src/models/: baseline.py  models.py
src/telco_churn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/training/: train.py
tests/: test_preprocessing.py
