[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telco-churn"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "numpy",
    "pydantic",
    "openpyxl",
]

[project.optional-dependencies]
ml = [
    "torch",
    "scikit-learn",
]
tracking = [
    "mlflow",
]
dev = [
    "ruff",
    "pytest",
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]